[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "docker>=7.1.0",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "celery>=5.5.3",
    "eventlet>=0.40.3",
    "elasticsearch>=8.14.0,<9.0.0",
    "fastapi>=0.121.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "kafka-python>=2.2.15",
    "motor>=3.7.1",
    "opendal>=0.46.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    # 文档解析相关依赖
    "pypdfium2>=4.30.0", # PDF 解析
    "python-docx>=1.1.0", # Word 文档解析
    "openpyxl>=3.1.5", # Excel 解析 (.xlsx)
    "pandas>=2.2.2", # 表格数据处理
    "beautifulsoup4>=4.12.2", # HTML 解析
    "chardet>=5.1.0", # 编码检测
    "markdown>=3.5.1", # Markdown 解析
    "lxml>=5.1.0", # XML 解析
    "pillow>=11.2.1", # 图片处理
    "pytesseract>=0.3.13", # OCR 文字识别
    "minio>=7.2.18",
    "boto3>=1.40.61",
    "aioboto3>=15.5.0",
    "oss2>=2.19.1",
    "cos-python-sdk-v5>=1.9.38",
    "huaweicloudsdkcore>=3.1.175",
    "huaweicloudsdkobs>=3.1.175",
    "volcengine>=1.0.206",
    "azure-storage-blob>=12.27.1",
    "google-cloud-storage>=3.6.0",
    "unstructured>=0.18.21",
    "pypandoc>=1.16.2",
    "gmpy2>=2.2.2",
    "blinker>=1.9.0",
    "resend>=2.19.0",
    "sendgrid>=6.12.5",
    "jinja2>=3.1.6",
    "pydantic-extra-types>=2.10.6",
    "python-alipay-sdk>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.2",
]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
